--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:theme="@style/Theme.StoryApp">
 
         <activity
-            android:name=".AddStoryActivity"
+            android:name=".ui.AddStoryActivity"
             android:exported="false" />
         <activity
             android:name=".ui.DetailActivity"
@@ -38,10 +38,10 @@
             android:name=".ui.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
