--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -48,6 +49,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.room:room-ktx:2.4.2'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     kapt 'androidx.room:room-compiler:2.4.2'
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
 
