--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,13 +45,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.room:room-ktx:2.4.2'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     kapt 'androidx.room:room-compiler:2.4.2'
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+    implementation 'androidx.room:room-paging:2.4.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
